#291 -- error message is not pretty, but also not unclear. figured out why junit wasnt running. bringing those tests up to speed.